fix for nav button jumping down(About button)

--- a/css/web_ui.css
+++ b/css/web_ui.css
@@ -32,7 +32,7 @@ body {
 	padding-top: 15px;
 	position: absolute;
 	top: 2%;
-	left: 80%;
+	left: 75%;
 	height: 90px;
 	width: auto;
 }
